[package]
name = "box-dyn-dns"
description = "Updates a DNS entry in Cloudflare based off of the current public IP address"
keywords = ["dns", "cloudflare"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octylFractal/box-dyn-dns"

[dependencies]
structopt = "0.3"
trust-dns-resolver = "0.20"
serde_yaml = "0.8"
serde_json = "1"
log = "0.4"
stderrlog = "0.5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.attohttpc]
version = "0.17"
default-features = false
features = ["json", "tls"]

[dependencies.color-eyre]
version = "0.5"
default-features = false
